syntax = "proto3";

package project.planton.provider.cloudflare.cloudflareworker.v1;

import "project/planton/credential/cloudflarecredential/v1/spec.proto";
import "project/planton/provider/cloudflare/cloudflareworker/v1/api.proto";

//cloudflare-worker stack-input
message CloudflareWorkerStackInput {
  //target cloud-resource
  CloudflareWorker target = 1;
  //provider-credential
  project.planton.credential.cloudflarecredential.v1.CloudflareCredentialSpec provider_credential = 2;
}
